--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -12,15 +12,15 @@ lang: en-US
 title: Basically Basic
 email: dugan.nash@mailinator.com
 description: "Your new default Jekyll theme"
-baseurl: "/jekyll-theme-basically-basic"
-url: "https://mmistakes.github.io"
-repository: "mmistakes/minimal-mistakes"
+baseurl: "/bir_themepoc"
+url: "https://9vinny.github.io"
+#repository: "mmistakes/minimal-mistakes"
 author:
-  name: Dugan Nash
+  name: Bir #Dugan Nash
   twitter: Towlette_Pettetucci
-  picture: https://api.adorable.io/avatars/285/johndoe.png
-twitter_username: Towlette_Pettetucci
-github_username: Towlette_Pettetucci
+  picture: #https://api.adorable.io/avatars/285/johndoe.png
+twitter_username: #Towlette_Pettetucci
+github_username: #Towlette_Pettetucci
 logo: /assets/icons/basically-basic-logo-light.svg
 google_analytics: UA-2011187-6
 disqus:
