--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -13,3 +13,6 @@ gem "jekyll-remote-theme"
 #   gem "jekyll-feed"
 #   gem "jemoji"
 # end
+
+gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw]
+gem "bir_themepoc"
