--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -15,4 +15,4 @@ gem "jekyll-remote-theme"
 # end
 
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw]
-gem "bir_themepoc"
+gem "jekyll-theme-basically-basic"
